[package]
name = "moderator"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
futures = "0.3"
actix-files = "0.6"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.2"
reqwest = { version = "0.11", features = ["json", "multipart"] }
tempfile = "3.3"
tokio = { version = "1", features = ["fs"] }
base64 = "0.21"